src/objects/ACCL__Order_Template__c.object
<CustomObject>
    <description>Template which controls the behaviour of a sales document.</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The attribute used to enable or disable the current template.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Add_Former_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The template setting controls whether items, which belong to a former sales document of the same business partner and of the same sales document template, are to be added to the disposal list. The system considers only sales documents which have reached a status of status type = &apos;Ready&apos; within the last number of days specified in SdoMeta.ConsiderMaxHistoryDays.</description>
        <label>Add Former Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Allow_Competitor_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls, whether foreign products can be used in the sales document or not.</description>
        <label>Allow Competitor Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Allow_Header_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Header Discount  allows discount at Order header when checked. The discount percentage or amount is evaluated from valid Account Specific conditions for a specified quantity of Order Item  associated with the order</description>
        <inlineHelpText>Allow Header Discount  allows discount at Order header when checked. The discount percentage or amount is evaluated from valid Account Specific conditions for a specified quantity of Order Item  associated with the order</inlineHelpText>
        <label>Allow Header Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Allowed_Orderer_Types__c</fullName>
        <description>Allowed Orderer Types</description>
        <label>Allowed Orderer Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Replenishment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Barcode_Scan_Behavior__c</fullName>
        <description>Controls the behavior of barcode scanning of products: Select item and increase quantity.</description>
        <label>Barcode Scan Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OnlySelect</fullName>
                </value>
                <value>
                    <fullName>SelectIncrease</fullName>
                    <default>true</default>
                    <label>SelectIncrease</label>
                </value>
                <value>
                    <fullName>AddBatchNumber</fullName>
                </value>
                <value>
                    <fullName>UserExit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Calculation_Schema__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to calculation schema for determining calculation schema used in truck load documents</description>
        <label>Calculation Schema</label>
        <referenceTo>ACCL__CP_Calculation_Schema__c</referenceTo>
        <relationshipLabel>Order Templates</relationshipLabel>
        <relationshipName>Order_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Cancel_Reason_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to denote that cancel reasons are required.</description>
        <label>Cancel Reason Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Cancel_Reason__c</fullName>
        <description>Reasons for cancelation</description>
        <label>Cancel Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CashierNotAvailable</fullName>
                </value>
                <value>
                    <fullName>CustomerBlocked</fullName>
                </value>
                <value>
                    <fullName>DoubleDelivery</fullName>
                </value>
                <value>
                    <fullName>Misentry</fullName>
                </value>
                <value>
                    <fullName>NotEnoughMoney</fullName>
                </value>
                <value>
                    <fullName>WrongDelivery</fullName>
                </value>
                <value>
                    <fullName>WrongPricing</fullName>
                </value>
                <value>
                    <fullName>CanceledByCall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Capture_Release_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Capture Release Time.</description>
        <label>Capture Release Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Check__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls, if the delivery date must be checked.</description>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Compute_Price__c</fullName>
        <description>Controls if prices are computed for the items.</description>
        <label>Compute Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Field_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The template setting controls whether the field state has to be considered when adding a product to the disposal list.</description>
        <label>Consider Field Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_History_In_Days__c</fullName>
        <description>Controls how many days should be used to determine a last item.</description>
        <label>Consider History In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Lead_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is set, the lead time is taken from the delivery recipient. Otherwise the lead time of this template is taken. The maximum lead time is defined in both cases by the template.</description>
        <label>Consider Lead Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Listing__c</fullName>
        <description>All products of active listings are considered according to the specified listing finding template.</description>
        <label>Consider Listing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Modification_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether modification reasons can be entered for modified items.</description>
        <label>Consider Modification Reason</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_OoS__c</fullName>
        <description>To the disposal list, the system adds out of stock products and/or presets their quantity.</description>
        <label>Consider OoS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Preset</fullName>
                </value>
                <value>
                    <fullName>AddPreset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Promotion__c</fullName>
        <description>All products of active and executable are considered according to the specified promotion finding template.</description>
        <label>Consider Promotion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Quantity_Suggestion__c</fullName>
        <description>Specifies presetting of ordered quantity via calculated quantity suggestion or pre ordered quantity.</description>
        <label>Consider Quantity Suggestion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lqty</fullName>
                </value>
                <value>
                    <fullName>Pqty</fullName>
                </value>
                <value>
                    <fullName>LQtyStock</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If &apos;1&apos; (True): delivery at Saturdays are allowed.</description>
        <label>Consider Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Selectable_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This attribute is used to enable selectable promotions on mobility</description>
        <label>Consider Selectable Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the current stock must be considered for quantity suggestion in the web display of the disposal list.(At present additionally used for displaying current stock in the disposal list of the mobility device.)</description>
        <label>Consider Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If &apos;1&apos; (True): delivery at Sundays are allowed.</description>
        <label>Consider Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Creation_Platform__c</fullName>
        <description>Indicates, on which platform this template can be used for new creation of sales documents.</description>
        <label>Creation Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop</fullName>
                    <default>true</default>
                    <label>Laptop</label>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Selling_Assortment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls, whether the customer selling assortment is used for presetting the disposal list.
    - 0/No: The system doesn&apos;t consider any customer selling assortment.
    - 1/Yes: The system filters the disposal list subject to the customer selling assortment. All other template attributes for the disposal list control have to be considered also.</description>
        <label>Customer Selling Assortment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Deletion_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if it is allowed to delete any object of that template at all.</description>
        <label>Deletion Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Date_Calculation__c</fullName>
        <description>Controls, how the delivery date is determined.</description>
        <label>Delivery Date Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
                <value>
                    <fullName>Built In</fullName>
                    <default>true</default>
                    <label>Built In</label>
                </value>
                <value>
                    <fullName>User Exit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Language dependent description 1</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Language dependent description 2</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Language dependent description 3</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
      &quot;Language2&quot;, ACCL__Description_Language_2__c,
      &quot;Language3&quot;, ACCL__Description_Language_3__c,
      &quot;Language4&quot;, ACCL__Description_Language_4__c,
      ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Disposal_List_Proposal__c</fullName>
        <description>Controls, whether and how the disposal list is build for this sales document template.</description>
        <label>Disposal List Proposal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                    <default>true</default>
                    <label>Proposal</label>
                </value>
                <value>
                    <fullName>Talon</fullName>
                </value>
                <value>
                    <fullName>UserExit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Document_Transaction_Type__c</fullName>
        <description>Specifies how to handle a sales document regarding payments.</description>
        <label>Document Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CashInvoice</fullName>
                </value>
                <value>
                    <fullName>CreditInvoice</fullName>
                </value>
                <value>
                    <fullName>ValuatedDeliveryNote</fullName>
                </value>
                <value>
                    <fullName>NonValuatedDeliveryNote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Document_Type__c</fullName>
        <description>Specifies how to handle a sales document regarding payments.</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CashCheckIn</fullName>
                </value>
                <value>
                    <fullName>CashCheckOut</fullName>
                </value>
                <value>
                    <fullName>OrderEntry</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>ProductCheckOut</fullName>
                </value>
                <value>
                    <fullName>ProductCheckIn</fullName>
                </value>
                <value>
                    <fullName>TruckAudit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Flat_Item_List_Grouping__c</fullName>
        <description>When displaying the disposal list as flat list on the mobility device, the items will be grouped in accordance with the product groups of the specified level.</description>
        <label>Flat Item List Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Flavor</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Generate_Pricing_Information__c</fullName>
        <description>This attribute is used to control the storage of pricing information in respective order item/order object. In turn to be displayed during printing or print preview.</description>
        <label>Generate Pricing Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>YesOV</fullName>
                    <isActive>false</isActive>
                    <label>YesOV</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Generate_Pricing_Log__c</fullName>
        <description>Provides a possibility to control if the pricing engine will write/synchronize pricing logs.</description>
        <label>Generate Pricing Log</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Generate_Rewards_Log__c</fullName>
        <description>This attribute can be used by user to switch on/off the generation of Rewards log file when order is saved.</description>
        <label>Generate Rewards Log</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Hide_Wholesaler__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls, whether the attribute Broker/Wholesaler is hidden in the U I.</description>
        <label>Hide Wholesaler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Id_Generation__c</fullName>
        <description>Controls the behavior of the document number generation</description>
        <label>Id Generation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Creation</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Reference_1__c</fullName>
        <description>Defines the first inventory reference usage.</description>
        <label>Inventory Reference 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>DefaultUser</fullName>
                </value>
                <value>
                    <fullName>ActualUser</fullName>
                </value>
                <value>
                    <fullName>DefaultVehicle</fullName>
                </value>
                <value>
                    <fullName>ActualVehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Reference_2__c</fullName>
        <description>Defines the second inventory reference usage.</description>
        <label>Inventory Reference 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>DefaultUser</fullName>
                </value>
                <value>
                    <fullName>ActualUser</fullName>
                </value>
                <value>
                    <fullName>DefaultVehicle</fullName>
                </value>
                <value>
                    <fullName>ActualVehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Reference_3__c</fullName>
        <description>Defines the third inventory reference usage.</description>
        <label>Inventory Reference 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>DefaultUser</fullName>
                </value>
                <value>
                    <fullName>ActualUser</fullName>
                </value>
                <value>
                    <fullName>DefaultVehicle</fullName>
                </value>
                <value>
                    <fullName>ActualVehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Invoice_Id_Generation__c</fullName>
        <description>Controls the behavior of the invoice number generation.</description>
        <label>Invoice Id Generation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Creation</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>NoGen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Item_Input_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All items of the sales document must have been edited (entered quantity) before releasing the document.</description>
        <label>Item Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Item_Presetting_Policy__c</fullName>
        <description>Specifies whether the system shows the presetting of item values in the truck load and cash documents.</description>
        <label>Item Presetting Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlindMode</fullName>
                </value>
                <value>
                    <fullName>NonBlindMode</fullName>
                </value>
                <value>
                    <fullName>Prepopulated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__List_Option__c</fullName>
        <description>Specifies the default list option in the sales document</description>
        <label>List Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Flat List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Listing_Finding_Date__c</fullName>
        <description>Controls, which date is used for the product finding algorithms of customer authorization lists.</description>
        <label>Listing Finding Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InitiationDate</fullName>
                </value>
                <value>
                    <fullName>OrderDate</fullName>
                </value>
                <value>
                    <fullName>DeliveryDate</fullName>
                </value>
                <value>
                    <fullName>ListingDate</fullName>
                    <default>true</default>
                    <label>ListingDate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Listing_Finding__c</fullName>
        <description>Reference to the authorization list finding template, which controls the behaviour of the algorithm.</description>
        <label>Listing Finding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Hit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Manual_Adjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls, if the delivery date can be edited by the user or not.</description>
        <label>Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Max_Lead_Time__c</fullName>
        <defaultValue>365</defaultValue>
        <description>Number of days maximum allowed to place an order in front of the planned delivery date.</description>
        <label>Max Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Max_Order_Value__c</fullName>
        <description>Maximum of order value accepted for orders of this template.</description>
        <label>Max Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Min_Lead_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days minimum needed for processing the order and preparing the delivery.</description>
        <label>Min Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Min_Order_Value__c</fullName>
        <description>Minimum of order value accepted for orders of this template. Only considered if &gt;=0.01.</description>
        <label>Min Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Mobility_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls validation of restrictions that are necessary for usage on the mobility devices.</description>
        <label>Mobility Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Notify_Outdated_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if the system gives a warning about an outdated complex pricing calculation when opening the order.</description>
        <label>Notify Outdated Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Number_Of_Historic_Quantities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of historical orders that will be considered for quantity suggestion.</description>
        <label>Number Of Historic Quantities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Payment_Modification_Reason__c</fullName>
        <description>Specifies whether modification reasons can be entered for difference in payments.</description>
        <label>Payment Modification Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notrequired</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Preview_Printout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--- Attribute no longer used --- Preview Printout.</description>
        <label>Preview Printout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_Type__c</fullName>
        <description>Determines the Price Type for every product</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>factory</fullName>
                </value>
                <value>
                    <fullName>consumer</fullName>
                </value>
                <value>
                    <fullName>NotRelevant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Date__c</fullName>
        <description>Defines which date is used for complex price calculation.</description>
        <label>Pricing Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OrderDate</fullName>
                </value>
                <value>
                    <fullName>DeliveryDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>